--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,28 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.app{
+ min-height: 100vh;
+ background: rgb(77, 184, 77); 
+ display: flex;
+ justify-content:space-around;
+ align-items: center;
+}
+
+.tweet{
+  height:300px;
+  width: 300px;
+  background: white;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.red{
+  color:red;
+  font-size:50px;
 }
